test duplicate finder plugin
Signed-off-by: Olivier Lamy <olamy@apache.org>

--- a/jetty-ee8/jetty-ee8-glassfish-jstl/pom.xml
+++ b/jetty-ee8/jetty-ee8-glassfish-jstl/pom.xml
@@ -41,6 +41,10 @@
           <groupId>javax.servlet.jsp</groupId>
           <artifactId>*</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>javax.servlet.jsp.jstl</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
 
