--- a/jetty-integrations/jetty-infinispan/jetty-infinispan-common/pom.xml
+++ b/jetty-integrations/jetty-infinispan/jetty-infinispan-common/pom.xml
@@ -35,6 +35,12 @@
       <groupId>org.infinispan</groupId>
       <artifactId>infinispan-client-hotrod</artifactId>
       <scope>provided</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.wildfly.security</groupId>
+          <artifactId>wildfly-elytron</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.infinispan</groupId>
