--- a/jetty-ee9/jetty-ee9-osgi/test-jetty-ee9-osgi/pom.xml
+++ b/jetty-ee9/jetty-ee9-osgi/test-jetty-ee9-osgi/pom.xml
@@ -12,6 +12,8 @@
   <properties>
     <assembly-directory>target/distribution</assembly-directory>
     <bundle-symbolic-name>${project.groupId}.boot.test.osgi</bundle-symbolic-name>
+    <!-- too many duplicates with osgi jars... -->
+    <duplicate-finder.skip>true</duplicate-finder.skip>
     <injection.bundle.version>1.2</injection.bundle.version>
     <jetty-orbit-url>https://download.eclipse.org/jetty/orbit/</jetty-orbit-url>
     <maven.deploy.skip>true</maven.deploy.skip>
